--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 	<title> Etsy API </title>
 </head>
 <body>
-	<section> </section>
+	<form> 
+		<input type="text" class="etsy-input">
+		<button type="submit"> Search Etsy </button>
+	</form>
+	<section id="etsy-info"> </section>
+
 
 <script type="text/javascript" src=node_modules/jquery/dist/jquery.min.js
 ></script>
