--- a/index.html
+++ b/index.html
@@ -2,13 +2,45 @@
 <html>
 <head>
 	<title> Etsy API </title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
-<body>
-	<form> 
+	<nav> 
+		<div class="left-nav"> <a href="#"> ETSY </div>
 		<input type="text" class="etsy-input">
 		<button type="submit"> Search Etsy </button>
-	</form>
-	<section id="etsy-info"> </section>
+		<div class="right-nav">
+			<span> <a href="#"> Home  </a></span>
+			<span> <a href="#"> Favorites </a></span>
+			<span> <a href="#"> Your Shop </a></span>
+			<span> <a href="#"> You  </a></span>
+			<span> <a href="#"> Cart </a></span>
+		</div>
+	</nav>
+<body>
+	<main>
+	<section class="category-menu"> 
+		<div> All categories </div> 
+		<a class="category-menu-link" href="#"> Home & Living  </a>
+		<a class="category-menu-link" href="#"> Art & Collectibles </a>
+		<a class="category-menu-link" href="#"> Weddings </a>
+		<a class="category-menu-link" href="#"> Clothing </a>
+		<a class="category-menu-link" href="#"> Paper & Party Supplies </a>
+		<a class="category-menu-link" href="#"> Jewelry  </a>
+		<a class="category-menu-link" href="#"> Accessories  </a>
+		<a class="category-menu-link" href="#"> Craft Supplies & Tools </a>
+		<a class="category-menu-link" href="#"> Bags & Purses</a>
+		<a class="category-menu-link" href="#"> Bath & Beauty  </a>
+		<a class="category-menu-link" href="#"> Shoes  </a>
+		<a class="category-menu-link" href="#"> Bokes, Movies & Music  </a>
+		<a class="category-menu-link" href="#"> Pet Supplies </a>
+	</section>
+	<section class="categories-results">
+		<span> Top categories for </span>
+		<section id="etsy-info"> </section>
+	</section>
+	</main>
+
 
 
 <script type="text/javascript" src=node_modules/jquery/dist/jquery.min.js
